--- a/blocks/form.css
+++ b/blocks/form.css
@@ -5,6 +5,7 @@
 .form__fieldset {
   border: 0;
   padding: 0;
+  margin: 0; /* default has '0 2px' */
 }
 
 .form__label {
@@ -41,7 +42,7 @@
   width: 100%;
   border-radius: 4px;
   padding: 20px 0;
-  border: 1px solid #838383;
+  border: 0;
   background-color: #1878dc;
   transition: background-color 0.4s ease-out;
   color: #fff;
